--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "clsx": "^2.1.1",
+    "clsx": "2.1.1",
     "next": "15.1.7",
-    "radix-ui": "^1.1.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-fast-marquee": "^1.6.5",
-    "tailwind-merge": "^3.0.1"
+    "radix-ui": "1.1.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-fast-marquee": "1.6.5",
+    "tailwind-merge": "3.0.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.0.0",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@eslint/eslintrc": "3.2.0",
+    "@tailwindcss/postcss": "4.0.0",
+    "@types/node": "20.17.17",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
+    "eslint": "9.20.1",
     "eslint-config-next": "15.1.7",
-    "postcss": "^8",
-    "tailwindcss": "^4.0.0",
-    "typescript": "^5"
+    "postcss": "8.5.2",
+    "tailwindcss": "4.0.0",
+    "typescript": "5.7.3"
   },
   "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
